--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
+  --ifm-color-primary: #4b5e6d;
+  --ifm-color-primary-dark: #3e505e;
+  --ifm-color-primary-darker: #374753;
+  --ifm-color-primary-darkest: #2b3842;
+  --ifm-color-primary-light: #5e7080;
+  --ifm-color-primary-lighter: #6e7f8f;
+  --ifm-color-primary-lightest: #8c9aa8;
   --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --docusaurus-highlighted-code-line-bg: rgba(75, 94, 109, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-color-primary: #8fc9db;
+  --ifm-color-primary-dark: #7db6c8;
+  --ifm-color-primary-darker: #6aa3b5;
+  --ifm-color-primary-darkest: #4c7e90;
+  --ifm-color-primary-light: #a2dced;
+  --ifm-color-primary-lighter: #b8e5f2;
+  --ifm-color-primary-lightest: #d6f1f9;
+  --docusaurus-highlighted-code-line-bg: rgba(143, 201, 219, 0.1);
 }
