--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,25 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #4b5e6d;
-  --ifm-color-primary-dark: #3e505e;
-  --ifm-color-primary-darker: #374753;
-  --ifm-color-primary-darkest: #2b3842;
-  --ifm-color-primary-light: #5e7080;
-  --ifm-color-primary-lighter: #6e7f8f;
-  --ifm-color-primary-lightest: #8c9aa8;
+  --ifm-color-primary: #2f6fad;
+  --ifm-color-primary-dark: #2a629b;
+  --ifm-color-primary-darker: #255888;
+  --ifm-color-primary-darkest: #1e456a;
+  --ifm-color-primary-light: #4580b8;
+  --ifm-color-primary-lighter: #5b92c4;
+  --ifm-color-primary-lightest: #7aacd4;
   --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(75, 94, 109, 0.1);
+  --docusaurus-highlighted-code-line-bg: rgba(47, 111, 173, 0.08);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #8fc9db;
-  --ifm-color-primary-dark: #7db6c8;
-  --ifm-color-primary-darker: #6aa3b5;
-  --ifm-color-primary-darkest: #4c7e90;
-  --ifm-color-primary-light: #a2dced;
-  --ifm-color-primary-lighter: #b8e5f2;
-  --ifm-color-primary-lightest: #d6f1f9;
-  --docusaurus-highlighted-code-line-bg: rgba(143, 201, 219, 0.1);
+  --ifm-color-primary: #4d90b3;
+  --ifm-color-primary-dark: #407b99;
+  --ifm-color-primary-darker: #386d89;
+  --ifm-color-primary-darkest: #2f5a70;
+  --ifm-color-primary-light: #5da0c2;
+  --ifm-color-primary-lighter: #74aecb;
+  --ifm-color-primary-lightest: #8bbdd5;
+  --docusaurus-highlighted-code-line-bg: rgba(77, 144, 179, 0.1);
 }
