--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,24 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2f6fad;
-  --ifm-color-primary-dark: #2a629b;
-  --ifm-color-primary-darker: #255888;
-  --ifm-color-primary-darkest: #1e456a;
-  --ifm-color-primary-light: #4580b8;
-  --ifm-color-primary-lighter: #5b92c4;
-  --ifm-color-primary-lightest: #7aacd4;
-  --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(47, 111, 173, 0.08);
+  --ifm-color-primary: #4f81a4;
+  --ifm-color-primary-dark: #406b8a;
+  --ifm-color-primary-darker: #375c75;
+  --ifm-color-primary-darkest: #2c475c;
+  --ifm-color-primary-light: #6093b4;
+  --ifm-color-primary-lighter: #7aa7c4;
+  --ifm-color-primary-lightest: #99bed4;
+  --docusaurus-highlighted-code-line-bg: rgba(79, 129, 164, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #4d90b3;
-  --ifm-color-primary-dark: #407b99;
-  --ifm-color-primary-darker: #386d89;
-  --ifm-color-primary-darkest: #2f5a70;
-  --ifm-color-primary-light: #5da0c2;
-  --ifm-color-primary-lighter: #74aecb;
-  --ifm-color-primary-lightest: #8bbdd5;
-  --docusaurus-highlighted-code-line-bg: rgba(77, 144, 179, 0.1);
+  --ifm-color-primary: #7fc4d9;
+  --ifm-color-primary-dark: #6bb1c5;
+  --ifm-color-primary-darker: #5a9cae;
+  --ifm-color-primary-darkest: #4b8595;
+  --ifm-color-primary-light: #93d2e4;
+  --ifm-color-primary-lighter: #a7deed;
+  --ifm-color-primary-lightest: #c2ecf5;
+  --docusaurus-highlighted-code-line-bg: rgba(127, 196, 217, 0.1);
 }
