--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -6,25 +6,24 @@
 
 /* You can override the default Infima variables here. */
 :root {
-  --ifm-color-primary: #2e8555;
-  --ifm-color-primary-dark: #29784c;
-  --ifm-color-primary-darker: #277148;
-  --ifm-color-primary-darkest: #205d3b;
-  --ifm-color-primary-light: #33925d;
-  --ifm-color-primary-lighter: #359962;
-  --ifm-color-primary-lightest: #3cad6e;
-  --ifm-code-font-size: 95%;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
+  --ifm-color-primary: #4f81a4;
+  --ifm-color-primary-dark: #406b8a;
+  --ifm-color-primary-darker: #375c75;
+  --ifm-color-primary-darkest: #2c475c;
+  --ifm-color-primary-light: #6093b4;
+  --ifm-color-primary-lighter: #7aa7c4;
+  --ifm-color-primary-lightest: #99bed4;
+  --docusaurus-highlighted-code-line-bg: rgba(79, 129, 164, 0.1);
 }
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 [data-theme='dark'] {
-  --ifm-color-primary: #25c2a0;
-  --ifm-color-primary-dark: #21af90;
-  --ifm-color-primary-darker: #1fa588;
-  --ifm-color-primary-darkest: #1a8870;
-  --ifm-color-primary-light: #29d5b0;
-  --ifm-color-primary-lighter: #32d8b4;
-  --ifm-color-primary-lightest: #4fddbf;
-  --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.3);
+  --ifm-color-primary: #7fc4d9;
+  --ifm-color-primary-dark: #6bb1c5;
+  --ifm-color-primary-darker: #5a9cae;
+  --ifm-color-primary-darkest: #4b8595;
+  --ifm-color-primary-light: #93d2e4;
+  --ifm-color-primary-lighter: #a7deed;
+  --ifm-color-primary-lightest: #c2ecf5;
+  --docusaurus-highlighted-code-line-bg: rgba(127, 196, 217, 0.1);
 }
